调整并发问题，引入泛型，重构API
